--- a/src/main/resources/templates/proyectos.html
+++ b/src/main/resources/templates/proyectos.html
@@ -249,7 +249,7 @@
                         <h4>Menu</h4>
                         <ul class="lista">
                             <li>
-                                <a href="#">Index</a>
+                                <a href="/index">Inicio</a>
                             </li>
                             <li>
                                 <a href="/sobremi">Sobre mi</a>
