--- a/src/main/resources/templates/sobremi.html
+++ b/src/main/resources/templates/sobremi.html
@@ -282,16 +282,16 @@
                         <h4>Menu</h4>
                         <ul class="lista">
                             <li>
-                                <a href="#">Index</a>
+                                <a href="/index">Inicio</a>
                             </li>
                             <li>
-                                <a href="#sobremi">Sobre mi</a>
+                                <a href="/sobremi">Sobre mi</a>
                             </li>
                             <li>
-                                <a href="#Proyectos">Proyectos</a>
+                                <a href="/Proyectos">Proyectos</a>
                             </li>
                             <li>
-                                <a href="#contacto"> contacto</a>
+                                <a href="/contacto"> contacto</a>
                             </li>
                         </ul>
                     </div>
