--- a/src/main/resources/static/style-contacto.css
+++ b/src/main/resources/static/style-contacto.css
@@ -34,7 +34,7 @@ header{
 }
 span{
     color: var(--primary-color);
-}
+} 
 p{
     text-align: justify;
     font-size: 15px;
@@ -55,7 +55,7 @@ h3{
 h4{
     font-weight: 0.625rem;
     font-size: 20px;
-}
+}   
 /*------------------------------*/
 .redes a{
     background-color: transparent;
@@ -140,11 +140,11 @@ h4{
 }
 .boton-personalizacion-color:active{
     transform: scale(0.95);
-
+    
 }
 .circulo-color{
     border: 2px solid transparent;
-
+    
     width: 2rem;
     height: 2rem;
     cursor: pointer;
@@ -153,10 +153,10 @@ h4{
     position: relative;
 }
 .circulo-color:nth-child(1) { background-color: #e93535; }
-.circulo-color:nth-child(2) { background-color: #00cc00; }
-.circulo-color:nth-child(3) { background-color: #ff5e00; }
-.circulo-color:nth-child(4) { background-color: #23a7ff; }
-.circulo-color:nth-child(5) { background-color: #9333d3; }
+  .circulo-color:nth-child(2) { background-color: #00cc00; }
+  .circulo-color:nth-child(3) { background-color: #ff5e00; }
+  .circulo-color:nth-child(4) { background-color: #23a7ff; }
+  .circulo-color:nth-child(5) { background-color: #9333d3; }
 
 .menu-desplegable-colores{
     display: none;
@@ -164,13 +164,13 @@ h4{
     background-color:var(--color-fondo-boton);
     border-radius: 50px;
     padding: 0.25rem;
-}
+}  
 .menu-desplegable-colores.show {
-    display: flex;
+    display: flex; 
     flex-direction: row;
     gap: 0.4rem;
 
-
+    
 }
 /*-------------boton-dia-noche-----------------*/
 #color-toggle-btn {
@@ -219,10 +219,16 @@ h4{
     color: var(--text-color);
     margin-right: auto;
     transition: var(--transition);
+    display: inline-flex;
+    gap: 0.5rem;
+}
+.logo h3{
+    font-size: 2rem;
+    transition: var(--transition);
 }
 .logo:hover{
     transform: scale(1.1);
-
+    
 }
 .navbar{
     display: flex;
@@ -246,7 +252,7 @@ h4{
     border-bottom: 0.19rem solid var(--primary-color);
     text-shadow: 0 0 0.63rem var(--primary-color);
     transform: scale(1.2);
-
+    
 }
 .btn-menu{
     display: none;
@@ -259,7 +265,6 @@ h4{
     color: var(--primary-color);
     cursor: pointer;
 }
-
 /*------------------------------*/
 /*--------fin Header---------*/
 /*------------------------------*/
@@ -273,9 +278,9 @@ h4{
     justify-content: center;
     padding-top:7rem;
     margin-bottom: 7rem;
+    
 
-
-}
+}   
 .container-informacion{
     width: 45%;
     height: 100%;
@@ -288,15 +293,15 @@ h4{
 }
 .informacion{
     display: flex;
-
-
+    
+    
     border-radius: 10px;
     flex-direction: column;
     align-items: left;
     justify-content: center;
     width: 80%;
     gap: 0.6rem;
-
+    
 }
 
 .simbolo{
@@ -352,7 +357,7 @@ h4{
     display: flex;
     flex-direction: column;
     justify-content: center;
-
+    
     width: 55%;
 }
 .container-formulario form{
@@ -370,7 +375,7 @@ h4{
     align-items: center;
     justify-content: center;
     min-width:260px;
-
+    
     width: 100%;
 }
 .input-grupo-2{
@@ -378,7 +383,7 @@ h4{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
+    
     width: 100%;
 }
 .input-caja{
@@ -398,7 +403,7 @@ h4{
     background-color: var(--background-color);
     border: 2px solid var(--third-color);
     resize: none;
-
+    
 }
 .input-grupo-2 textarea, .input-caja input:focus{
     border-color: var(--third-color);
@@ -468,15 +473,15 @@ h4{
     flex-direction: row;
     justify-content: space-between;
     align-items:start;
-
+    
 }
 .footer-menu{
     padding: 2.5rem ;
-
+    
 }
 .footer-contacto{
     padding: 2.5rem;
-
+    
 }
 .redes-footer{
     padding: 2.5rem;
@@ -484,7 +489,7 @@ h4{
 .lista {
     display: flex;
     flex-direction: column;
-
+    
 }
 .lista li{
     display: inline-block;
@@ -524,7 +529,7 @@ h4{
     display: flex;
     justify-content: center;
     align-items: center;
-
+    
     background-color: var(--background-color);
 }
 .copyright{
@@ -542,6 +547,9 @@ h4{
 
 @media (max-width: 346px){
     .logo{
+        font-size: 20px;
+    }
+    .logo h3{
         font-size: 20px;
     }
 }
@@ -575,7 +583,7 @@ h4{
 }
 
 @media(max-width:1070px){
-
+    
     .descripcion-sobremi, .foto, .descripcion{
         width: 100%;
     }
@@ -593,7 +601,7 @@ h4{
     .container-mapa{
         width: 60%;
     }
-
+    
 }
 @media (max-width: 1000px) {
     .contacto{
@@ -609,7 +617,7 @@ h4{
         width: 100%;
         align-items: center;
     }
-
+    
 }
 @media(max-width:800px){
     .navbar{
@@ -622,9 +630,9 @@ h4{
         border-left: 2px solid var(--primary-color);
         border-bottom: 2px solid var(--primary-color);
         border-right: 2px solid var(--primary-color);
-        border-bottom-left-radius: 2rem;
-        border-bottom-right-radius: 2rem;
-        display: none;
+         border-bottom-left-radius: 2rem;
+         border-bottom-right-radius: 2rem;
+         display: none;
     }
     .navbar ul{
         width: 100%;
@@ -640,14 +648,14 @@ h4{
     }
 
     .navbar.show {
-        display: flex;
-        max-height: 500px;
+      display: flex;
+      max-height: 500px; 
     }
     .navbar ul li a:hover{
-        color: var(--primary-color);
-        border-bottom: 0.19rem solid var(--primary-color);
-        text-shadow: 0 0 0.63rem var(--primary-color);
-        transform: scale(1.08);
+    color: var(--primary-color);
+    border-bottom: 0.19rem solid var(--primary-color);
+    text-shadow: 0 0 0.63rem var(--primary-color);
+    transform: scale(1.08);
     }
 }
 @media (max-width: 1200px) {
@@ -657,17 +665,17 @@ h4{
 }
 
 @media (max-width: 630px) {
-    .container-mapa{
+     .container-mapa{
         width: 100%;
         border: none;
-    }
-    .texto-footer{
+     }
+     .texto-footer{
         width: 100%;
-    }
-    .footer-superior{
+     }
+     .footer-superior{
         flex-direction: column;
-    }
-    .container-mapa{
+     }
+     .container-mapa{
         width: auto;
     }
     .texto-footer{
@@ -676,7 +684,7 @@ h4{
 }
 
 @media(max-width:800px){
-
+    
     .targetas-sobremi {
         grid-template-columns: repeat(1, 1fr);
     }
@@ -684,7 +692,7 @@ h4{
 @media(max-width:476px){
     .celdas-tabla tr td{
         display: flex;
-    }
+    } 
     .btn-sobremi-descripcion{
         display: flex;
         align-items: center;
@@ -696,3 +704,56 @@ h4{
         width: 100%;
     }
 }
+
+
+.style1-contacto{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.style1-contacto .contact-box{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+.style1-contacto .contact-box i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    background-color: var(--secundary-background-color);
+    color: var(--primary-color);
+    font-size: 1.5rem;
+    width: 3.5rem;
+    height: 3.5rem;
+}
+
+.styleFooter-contacto{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    
+    padding-top: 0.5rem;
+}
+.styleFooter-contacto .contact-box{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    font-size: 0.9rem;
+    gap: 0.8rem;
+}
+.styleFooter-contacto .contact-title{
+    display: none;
+}
+.style1-contacto .contact-box i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    background-color: var(--secundary-background-color);
+    color: var(--primary-color);
+    font-size: 1.5rem;
+    width: 3.5rem;
+    height: 3.5rem;
+}
+
