--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -163,7 +163,7 @@
 
 
 
-    <a href="index.html"> Volver a la pagina principal</a>
+    <a href="/index"> Volver a la pagina principal</a>
     <script src="script-formulario.js"></script>
 </body>
 
