--- a/src/main/resources/templates/contacto.html
+++ b/src/main/resources/templates/contacto.html
@@ -43,6 +43,7 @@
         <li><a href="/sobremi">Sobre mí</a></li>
         <li><a href="/proyectos">Proyectos</a></li>
         <li><a href="/contacto">Contacto</a></li>
+         <li><a href="/login">Login</a></li>
       </ul>
     </nav>
   </div>
