--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,7 +55,7 @@
     -->
     <div class="container-header">
 
-        <a href="index.html" class="logo">Andres <span>Garza</span> </a>
+        <a href="/index" class="logo">Andres <span>Garza</span> </a>
 
         <button class="btn-menu" aria-label="Abrir menú" aria-expanded="false"><i class="fa-solid fa-bars"></i></button>
         <nav class="navbar">
