--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,14 +8,17 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <title>Login - Andres Garza</title>
 </head>
 
 <body>
   <!------- Selector de colores y tema ----->
   <div class="container-color-botones">
-    <a class="boton-personalizacion-color" aria-expanded="false" aria-controls="menu-colores" title="Abrir selector de colores"><i class="fa-solid fa-pen"></i></a>
+    <a class="boton-personalizacion-color" aria-expanded="false" aria-controls="menu-colores"
+      title="Abrir selector de colores"><i class="fa-solid fa-pen"></i></a>
     <div class="menu-desplegable-colores" id="menu-colores" role="menu" aria-hidden="true" tabindex="-1">
       <button class="circulo-color" data-color="#e93535" role="listitem"></button>
       <button class="circulo-color" data-color="#00cc00" role="listitem"></button>
@@ -52,19 +55,20 @@
         <div class="fondo-login">
           <h3 class="texto-ascendente-principal">Inicia <span>Sesión</span></h3>
           <p class="texto-ascendente-principal">Accede a tu cuenta para gestionar tus proyectos y configuraciones.</p>
-          
-          <form id="login-form" action="">
+
+          <form id="login-form" th:action="@{/login}" method="post" class="login-form">
             <div class="input-grupo">
               <div class="input-caja">
-                <label for="email" class="texto-ascendente-sobremi">Correo Electrónico</label>
-                <input type="email" id="email" placeholder="tu@correo.com" name="email" class="texto-ascendente-sobremi" required>
+                <label for="email" class="texto-ascendente-sobremi">Usuario</label>
+                <input id="username" name="username" placeholder="Username" type="text" class="texto-ascendente-sobremi"required>
               </div>
               <div class="input-caja">
                 <label for="password" class="texto-ascendente-sobremi">Contraseña</label>
-                <input type="password" id="password" placeholder="••••••••" name="password" class="texto-ascendente-sobremi" required>
+                <input type="password" id="password" placeholder="••••••••" name="password"class="texto-ascendente-sobremi" required>
+
               </div>
             </div>
-            
+
             <div class="opciones-login">
               <div class="recordar">
                 <input type="checkbox" id="remember" name="remember">
@@ -72,16 +76,16 @@
               </div>
               <a href="#" class="texto-ascendente-sobremi">¿Olvidaste tu contraseña?</a>
             </div>
-            
+
             <div class="texto-ascendente-sobremi">
               <input id="button-login" type="submit" value="Iniciar Sesión" class="btn-general btn-color btn-login">
             </div>
-            
-            <div class="registro-link texto-ascendente-sobremi">
-              <p>¿No tienes una cuenta? <a href="/registro">Regístrate aquí</a></p>
-            </div>
+
+
           </form>
-          
+          <p th:if="${error}" th:text="${error}" style="color:red;"></p>
+          <p th:if="${message}" th:text="${message}" style="color:green;"></p>
+
           <div class="login-social texto-ascendente-sobremi">
             <p>O inicia sesión con:</p>
             <div class="social-buttons">
@@ -159,6 +163,8 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script type="text/javascript">emailjs.init('N-Qj4Yxgsu8nK4poX')</script>
   <script src="/script.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDpLiSpzD3YXJeZf7flL7cQnBCKyygQSI&callback=initMap"></script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDpLiSpzD3YXJeZf7flL7cQnBCKyygQSI&callback=initMap"></script>
 </body>
+
 </html>
