formulario tarjetas proceso

--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -154,7 +154,15 @@
                     <button id="agregar-tarjeta-experiencia" class="btn-agregar" type="button">Agregar Tarjeta de Experiencia</button>
                     <div class="container-tarjetas-experiencia" id="container-tarjetas-experiencia"></div>
                   </div>
-                  
+
+
+                <h3>Mis Proyectos</h3>
+                <!-- Botón para agregar nueva tarjeta -->
+                <button id="agregar-tarjeta-proyecto" class="btn-agregar" type="button">
+                    <i class="fas fa-plus"></i> Agregar Proyecto
+                </button>
+                <!-- Contenedor donde se renderizarán las tarjetas -->
+                <div class="container-tarjetas-proyectos" id="container-tarjetas-proyectos"></div>
 
 
             </form>
