--- a/src/main/resources/templates/sobremi.html
+++ b/src/main/resources/templates/sobremi.html
@@ -101,7 +101,12 @@
             </div>
         </section>
 
-        <div id="container-tarjetas-readonly"></div>
+
+            <h2>Educación</h2>
+            <div id="container-tarjetas-educacion" class="container-tarjetas"></div>
+
+            <h2>Experiencia</h2>
+            <div id="container-tarjetas-experiencia" class="container-tarjetas"></div>
 
 
         
