YA APARECE LAS TARJETAS

--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -172,7 +172,10 @@
 
 
     <a href="/index"> Volver a la pagina principal</a>
-    <script src="script-formulario.js"></script>
+    <script src="/script-formulario.js"></script>
+    <script>
+        cargarProyectos('container-tarjetas-proyectos', 'edicion');
+    </script>
 </body>
 
 </html>
