--- a/src/main/resources/templates/proyectos.html
+++ b/src/main/resources/templates/proyectos.html
@@ -53,23 +53,23 @@
         <div class="container-header">
             <a href="/index" class="logo"><h3 class="nombre-display">Andres</h3><span class="apellido-display">Garza</span> </a>
             <button class="btn-menu" aria-label="Abrir menú" aria-expanded="false"><i class="fa-solid fa-bars"></i></button>
-            
+
             <nav class="navbar">
                 <ul>
                     <li><a href="/index">Inicio</a></li>
                     <li><a href="/sobremi">Sobre mí</a></li>
                     <li><a href="/proyectos">Proyectos</a></li>
                     <li><a href="/contacto">Contacto</a></li>
-                </ul>   
+                </ul>
             </nav>
-        </div>        
+        </div>
     </header>
     <!-- ========================= -->
     <!-- Inicio de la sección principal de la pagina proyectos. -->
     <!-- ========================= -->
     <main>
         <section class="proyectos-principal" id="proyectos">
-            
+
             <h2 class="texto-ascendente-principal texto-miproyec">Mis <span>Proyectos</span></h2>
             <!--
                 Sección de filtros para proyectos.
@@ -84,13 +84,14 @@
                 <button data-filtro="movile">Movile</button>
                 <button data-filtro="desktop">Desktop</button>
             </div>
-            <!-- 
+            <!--
                 Sección: Tarjetas de Proyectos
 
                 Descripción:
-                Este bloque de código HTML representa una galería de tarjetas de proyectos para un portafolio web. 
+                Este bloque de código HTML representa una galería de tarjetas de proyectos para un portafolio web.
                 Cada tarjeta muestra información relevante sobre un proyecto, incluyendo su imagen, título, fecha, especialidad, descripción y tecnologías utilizadas.
             -->
+
             <div class="proyectos-targetas">
                 <div data-categoria="web" class="proyectos-targeta">
                     <img src="targeta-cafe.jpg" alt="cafeteria">
@@ -113,21 +114,21 @@
                         <div class="container-btn-repo">
                             <a target="_blank" href="https://github.com/" class="btn-repo">Github Repo</a>
                         </div>
-                        </div>  
+                        </div>
                     </div>
-                    
+
                 </div>
                 <div data-categoria="web" class="proyectos-targeta">
                     <img src="targeta-app.jpg" alt="cafeteria">
                     <div class="texto-targeta-proyecto">
                             <div class="contenido-scrolleable">
-                        
+
                             <div class="titulo-fecha">
                                     <h3 class="titulo-targeta">Proyecto 2</h3>
                                     <p>2025</p>
                             </div>
                             <h4 class="especialidad">Full stack service</h4>
-                                
+
                             <p class="descripcion-targeta">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ipsum itaque ullam culpa animi maxime ducimus vero iste magni eum, veritatis illo inventore perferendis consequuntur ea aspernatur blanditiis quo? Sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum eos voluptatibus facere quos. A quod sit, eum voluptates animi unde ullam sed eveniet placeat est qui architecto quasi facilis possimus?</p>
                             <div class="tecnologia">
                                 <h4>Tecnologia usada:</h4>
@@ -141,7 +142,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                 </div>
                 <div data-categoria="movile" class="proyectos-targeta">
                     <img src="targeta-app-movile.png" alt="cafeteria">
@@ -152,7 +153,7 @@
                                     <p>2023-2024</p>
                             </div>
                             <h4 class="especialidad">Movile App Service</h4>
-                                
+
                             <p class="descripcion-targeta" >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem explicabo, aperiam aut sapiente nulla ut consectetur, eius at a quibusdam repellendus vero sunt asperiores perferendis, consequatur fuga. Officiis, vero recusandae.</p>
                             <div class="tecnologia">
                                 <h4>Tecnologia usada:</h4>
@@ -164,20 +165,20 @@
                             <div class="container-btn-repo">
                                 <a target="_blank" href="https://github.com/" class="btn-repo">Github Repo</a>
                             </div>
-                        </div>    
+                        </div>
                     </div>
                 </div>
                 <div data-categoria="desktop"  class="proyectos-targeta">
                     <img src="targeta-aplicacion-escritorio.jpg" alt="cafeteria">
                     <div class="texto-targeta-proyecto">
-                        
+
                         <div class="contenido-scrolleable">
                         <div class="titulo-fecha">
                                 <h3 class="titulo-targeta">Proyecto 4</h3>
                                 <p>2025</p>
                         </div>
                         <h4 class="especialidad">Desktop Software Service</h4>
-                            
+
                         <p class="descripcion-targeta">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ipsum itaque ullam culpa animi maxime ducimus vero iste magni eum, veritatis illo inventore perferendis consequuntur ea aspernatur blanditiis quo? Sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum eos voluptatibus facere quos. A quod sit, eum voluptates animi unde ullam sed eveniet placeat est qui architecto quasi facilis possimus?</p>
                         <div class="tecnologia">
                             <h4>Tecnologia usada:</h4>
@@ -188,7 +189,7 @@
                         </div>
                          <div class="container-btn-repo">
                             <a target="_blank" href="https://github.com/" class="btn-repo">Github Repo</a>
-                        </div> 
+                        </div>
                     </div>
                     </div>
                 </div>
@@ -201,7 +202,7 @@
                                 <p>2024</p>
                         </div>
                         <h4 class="especialidad">Full Stack Service</h4>
-                            
+
                         <p class="descripcion-targeta">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ipsum itaque ullam culpa animi maxime ducimus vero iste magni eum, veritatis illo inventore perferendis consequuntur ea aspernatur blanditiis quo? Sed? Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum eos voluptatibus facere quos. A quod sit, eum voluptates animi unde ullam sed eveniet placeat est qui architecto quasi facilis possimus?</p>
                         <div class="tecnologia">
                             <h4>Tecnologia usada:</h4>
@@ -219,10 +220,19 @@
                 </div>
                 </div>
             </div>
+
             
+            <div id="proyectos-container"></div>
+            <script src="/script-formulario.js"></script>
+            <script>
+                document.addEventListener('DOMContentLoaded', () => {
+                    cargarProyectos('proyectos-container', 'publico');
+                });
+            </script>
+
         </section>
-        
-           
+
+
     </main>
     <!-- ========================= -->
     <!-- Inicio del footer -->
@@ -262,19 +272,19 @@
                             </li>
                         </ul>
                     </div>
-                    
+
                     <div class="footer-contacto">
                         <h4>Contacto</h4>
                         <div class="contactos-list styleFooter-contacto"></div>
-                        
-                        
+
+
                     </div>
                     <div class="redes redes-footer">
                         <h4>redes</h4>
                         <div class="social-container style2"></div>
                     </div>
 
-                    
+
                 </div>
             </div>
             <div class="footer-inferior">
@@ -284,7 +294,7 @@
             </div>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDpLiSpzD3YXJeZf7flL7cQnBCKyygQSI&callback=initMap"></script>
 </body>
 </html>
