full chow, bajando pepa

--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -173,6 +173,7 @@
 
     <a href="/index"> Volver a la pagina principal</a>
     <script src="/script-formulario.js"></script>
+    <script src="/script.js"></script>
     <script>
         cargarProyectos('container-tarjetas-proyectos', 'edicion');
     </script>
