--- a/src/main/resources/templates/proyectos.html
+++ b/src/main/resources/templates/proyectos.html
@@ -98,7 +98,7 @@
         -->
         <div class="proyectos-container">
             <div class="proyectos-targetas" id="proyectos-container">
-                <div data-categoria="web" class="proyectos-targeta">
+                <!-- <div class="proyectos-targeta">
                     <img src="targeta-cafe.jpg" alt="cafeteria">
                     <div class="texto-targeta-proyecto">
                         <div class="contenido-scrolleable">
@@ -247,6 +247,7 @@
                         </div>
                     </div>
                 </div>
+                -->
             </div>
         </div>
 
