--- a/src/main/resources/templates/editor.html
+++ b/src/main/resources/templates/editor.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style-editor.css">
+    <link rel="stylesheet" href="/css/style-editorr.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css"
@@ -34,7 +34,7 @@
         <i id="icon-sun" class="fa-solid fa-sun" style="display: inline-block;"></i>
         <i id="icon-moon" class="fa-solid fa-moon" style="display: none;"></i>
     </button>
-
+    <div th:replace="/fragments/usos :: cabeza"></div>
     <main>
         <section class="form-container" aria-labelledby="form-title">
             <h2 id="form-title" class="form-title">Cambiar datos</h2>
@@ -172,8 +172,8 @@
 
 
     <a href="/index"> Volver a la pagina principal</a>
-    <script src="/script-formulario.js"></script>
-    <script src="/script.js"></script>
+    <script src="/js/script-formulario.js"></script>
+    <script src="/js/script.js"></script>
     <script>
         cargarProyectos('container-tarjetas-proyectos', 'edicion');
     </script>
