--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<html lang="es">
+<html xmlns:th="http://www.thymeleaf.org" lang="es">
+
 <!--
     Portafolio web de Andres Garza.
     Este documento HTML contiene la estructura y el contenido del portafolio, incluyendo secciones para presentación, proyectos y contacto.
@@ -11,12 +11,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style-index.css">
+    <link rel="stylesheet" href="/css/style-index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title class="nombre-display"> </title>
+    <title id="tituloPagina">Cargando...</title>
+
+
 
 </head>
 
@@ -50,27 +52,14 @@
     <!-- ========================= -->
     <!-- Inicio del header -->
     <!-- ========================= -->
-    <header>
-        <!--
+
+    <!--
         Contiene el logo con enlace a la página principal, un botón para abrir el menú en dispositivos móviles
         y una barra de navegación con enlaces a las secciones principales del portafolio: Inicio, Sobre mí, Proyectos y Contacto.
         -->
-        <div class="container-header">
-            
-            <a href="/index" class="logo"><h3 class="nombre-display">Andres</h3><span class="apellido-display">Garza</span> </a>
-            
-            <button class="btn-menu" aria-label="Abrir menú" aria-expanded="false"><i class="fa-solid fa-bars"></i></button>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="#inicio">Inicio</a></li>
 
-                <li><a href="/sobremi">Sobre mí</a></li>
-                <li><a href="/proyectos">Proyectos</a></li>
-                <li><a th:href="@{/contacto}">Contacto</a></li>
-                </ul>   
-            </nav>
-        </div>        
-    </header>
+    <div th:replace="/fragments/usos :: cabeza"></div>
+
     <!-- ========================= -->
     <!-- Inicio de la sección principal del portafolio. -->
     <!-- ========================= -->
@@ -154,7 +143,7 @@
                         <div class="texto-targeta">
                             <h3 class="titulo-targeta">Proyecto 3</h3>
                             <p class="descripcion-targeta">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam ipsum itaque ullam culpa animi maxime ducimus vero iste magni eum, veritatis illo inventore perferendis consequuntur ea aspernatur blanditiis quo? Sed?</p>
-                            <a target="_blank" href="https://github.com/" class="btn-general btn-color btn-targeta">Github Repo</a>
+                            <a target="_blank" href="https://github.com/" class="btn-general btn-color btn-targeta">GitHub Repo</a>
                         </div>
                 </div>
             </div>
@@ -187,55 +176,8 @@
         Contiene un mapa interactivo, un menú con enlaces a las secciones principales, información de contacto y enlaces a redes sociales.
         Incluye un aviso de derechos de autor.
     -->
-    <footer>
-        <div class="container-footer">
-                <div class="footer-superior">
-                    <div class="container-mapa">
-                        <h3>Mi <span>ubicación</span></h3>
-                        <div id="map"></div>
-                    </div>
-                <div class="texto-footer">
-                    <div class="footer-menu">
-                        <h4>Menu</h4>
-                        <ul class="lista">
-                            <li>
-                                <a href="/index">Inicio</a>
-                            </li>
-                            <li>
-                                <a href="/sobremi">Sobre mi</a>
-                            </li>
-                            <li>
-                                <a href="/Proyectos">Proyectos</a>
-                            </li>
-                            <li>
-                                <a href="/contacto"> contacto</a>
-                            </li>
-                        </ul>
-                    </div>
-                    
-                    <div class="footer-contacto">
-                        <h4>Contacto</h4>
-                        <div class="styleFooter-contacto otra-lista"></div>
-                    </div>
-
-                    <div class="redes redes-footer">
-                        <h4>redes</h4>
-                        <div class="social-container style2"></div>
-                    </div>
-                    
-
-                    
-                </div>
-            </div>
-            <div class="footer-inferior">
-                <p class="copyright">
-                © Andres Garza | Todos los derechos reservados.
-                </p>
-                <a href="/editor" class="btn-editar"><i class="fa-solid fa-gear"></i></a>
-            </div>
-        </div>
-    </footer>
-    <script src="script.js"></script>
+    <div th:replace="/fragments/usos :: foot"></div>
+    <script src="/js/script.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDpLiSpzD3YXJeZf7flL7cQnBCKyygQSI&callback=initMap"></script>
     
 </body>
