--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/style-login.css">
+  <link rel="stylesheet" href="/css/style-login.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,22 +32,7 @@
     <i id="icon-moon" class="fa-solid fa-moon" style="display: none;"></i>
   </button>
 
-  <header>
-    <div class="container-header">
-      <a href="index.html" class="logo">Andres <span>Garza</span> </a>
-
-      <button class="btn-menu" aria-label="Abrir menú" aria-expanded="false"><i class="fa-solid fa-bars"></i></button>
-      <nav class="navbar">
-        <ul>
-          <li><a href="/index">Inicio</a></li>
-          <li><a href="/sobremi">Sobre mí</a></li>
-          <li><a href="/proyectos">Proyectos</a></li>
-          <li><a href="/contacto">Contacto</a></li>
-          <li><a href="/login">Login</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <div th:replace="/fragments/usos :: cabeza"></div>
 
   <main>
     <section class="login" id="login">
@@ -59,7 +44,7 @@
           <form id="login-form" th:action="@{/login}" method="post" class="login-form">
             <div class="input-grupo">
               <div class="input-caja">
-                <label for="email" class="texto-ascendente-sobremi">Usuario</label>
+                <label for="username" class="texto-ascendente-sobremi">Usuario</label>
                 <input id="username" name="username" placeholder="Username" type="text" class="texto-ascendente-sobremi"required>
               </div>
               <div class="input-caja">
@@ -162,7 +147,7 @@
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script type="text/javascript">emailjs.init('N-Qj4Yxgsu8nK4poX')</script>
-  <script src="/script.js"></script>
+  <script src="/js/script.js"></script>
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDpLiSpzD3YXJeZf7flL7cQnBCKyygQSI&callback=initMap"></script>
 </body>
