--- a/src/main/resources/templates/proyectos.html
+++ b/src/main/resources/templates/proyectos.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style-proyecto.css">
+    <link rel="stylesheet" href="/css/style-proyecto.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
           integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -53,22 +53,7 @@
 <!-- ========================= -->
 <!-- Inicio del header -->
 <!-- ========================= -->
-<header>
-    <div class="container-header">
-        <a href="/index" class="logo"><h3 class="nombre-display">Andres</h3><span class="apellido-display">Garza</span>
-        </a>
-        <button class="btn-menu" aria-label="Abrir menú" aria-expanded="false"><i class="fa-solid fa-bars"></i></button>
-
-        <nav class="navbar">
-            <ul>
-                <li><a href="/index">Inicio</a></li>
-                <li><a href="/sobremi">Sobre mí</a></li>
-                <li><a href="/proyectos">Proyectos</a></li>
-                <li><a href="/contacto">Contacto</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+<div th:replace="/fragments/usos :: cabeza"></div>
 <!-- ========================= -->
 <!-- Inicio de la sección principal de la pagina proyectos. -->
 <!-- ========================= -->
@@ -251,7 +236,7 @@
             </div>
         </div>
 
-        <script src="/script-formulario.js"></script>
+        <script src="/js/script-formulario.js"></script>
         <script>
             document.addEventListener('DOMContentLoaded', () => {
                 cargarProyectos('proyectos-container', 'publico');
@@ -275,54 +260,8 @@
             - "redes redes-footer": Enlaces a redes sociales con sus respectivos íconos.
     - Sección inferior "footer-inferior" que muestra los derechos de autor.
 -->
-<footer>
-    <div class="container-footer">
-        <div class="footer-superior">
-            <div class="container-mapa">
-                <h3>Mi <span>ubicación</span></h3>
-                <div id="map"></div>
-            </div>
-            <div class="texto-footer">
-                <div class="footer-menu">
-                    <h4>Menu</h4>
-                    <ul class="lista">
-                        <li>
-                            <a href="/index">Inicio</a>
-                        </li>
-                        <li>
-                            <a href="/sobremi">Sobre mi</a>
-                        </li>
-                        <li>
-                            <a href="/Proyectos">Proyectos</a>
-                        </li>
-                        <li>
-                            <a href="/contacto"> contacto</a>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="footer-contacto">
-                    <h4>Contacto</h4>
-                    <div class="contactos-list styleFooter-contacto"></div>
-
-
-                </div>
-                <div class="redes redes-footer">
-                    <h4>redes</h4>
-                    <div class="social-container style2"></div>
-                </div>
-
-
-            </div>
-        </div>
-        <div class="footer-inferior">
-            <p class="copyright">
-                © Andres Garza | Todos los derechos reservados.
-            </p>
-        </div>
-    </div>
-</footer>
-<script src="/script.js"></script>
+<div th:replace="/fragments/usos :: foot"></div>
+<script src="/js/script.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDpLiSpzD3YXJeZf7flL7cQnBCKyygQSI&callback=initMap"></script>
 </body>
