nose, tengo miedo
viva el Peru.

--- a/src/main/resources/templates/fragments/usos.html
+++ b/src/main/resources/templates/fragments/usos.html
@@ -63,7 +63,7 @@
         </div>
         <div class="footer-inferior">
             <p class="copyright">
-                © Andres Garza | Todos los derechos reservados.
+                ©    <span id="nombre-completo">    </span>    | Todos los derechos reservados.
             </p>
             <a href="/editor" class="btn-editar"><i class="fa-solid fa-gear"></i></a>
         </div>
