--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-  <title>Login - Andres Garza</title>
+  <title id="tituloPagina">Cargando...</title>
 </head>
 
 <body>
@@ -83,67 +83,7 @@
     </section>
   </main>
 
-  <footer>
-    <div class="container-footer">
-      <div class="footer-superior">
-        <div class="container-mapa">
-          <h3>Mi <span>ubicación</span></h3>
-          <div id="map"></div>
-        </div>
-        <div class="texto-footer">
-          <div class="footer-menu">
-            <h4>Menu</h4>
-            <ul class="lista">
-              <li>
-                <a href="#">Index</a>
-              </li>
-              <li>
-                <a href="#sobremi">Sobre mi</a>
-              </li>
-              <li>
-                <a href="#Proyectos">Proyectos</a>
-              </li>
-              <li>
-                <a href="#contacto"> contacto</a>
-              </li>
-              <li>
-                <a href="#login"> login</a>
-              </li>
-            </ul>
-          </div>
 
-          <div class="footer-contacto">
-            <h4>Contacto</h4>
-            <div class="footer-info">
-              <i class="fa-solid fa-phone"></i>
-              <p>+51 934 234 123</p>
-            </div>
-            <div class="footer-info">
-              <i class="fa-solid fa-location-dot"></i>
-              <p>calle 44, San Martin</p>
-            </div>
-            <div class="footer-info">
-              <i class="fa-solid fa-envelope"></i></i>
-              <p>micorreo@gmail.com</p>
-            </div>
-          </div>
-          <div class="redes redes-footer">
-            <h4>redes</h4>
-            <a href=""><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="footer-inferior">
-        <p class="copyright">
-          © Andres Garza | Todos los derechos reservados.
-        </p>
-      </div>
-    </div>
-  </footer>
 
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script type="text/javascript">emailjs.init('N-Qj4Yxgsu8nK4poX')</script>
